apps/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet-demo
spec:
  type: ClusterIP
  selector:
    app: fleet-demo
  ports:
    - port: 80
      targetPort: 80
